@@ -234,9 +234,8 @@
           $temp .= "  <li><a href=\"http://sourceforge.net/projects/winmerge/\">Project Home</a></li>\n";
           $temp .= "  <li>CVS\n";
           $temp .= "    <ul>\n";
-          $temp .= "      <li><a href=\"http://winmerge.cvs.sourceforge.net/winmerge/\">Go to CVSWeb</a></li>\n";
+          $temp .= "      <li><a href=\"http://winmerge.cvs.sourceforge.net/winmerge/\">Browse CVS Tree</a></li>\n";
           $temp .= "      <li><a href=\"http://sourceforge.net/cvs/?group_id=13216\">CVS Client Access</a></li>\n";
-          $temp .= "      <li><a href=\"/developer/wincvs.php\">WinCVS Hints</a></li>\n";
           $temp .= "    </ul>\n";
           $temp .= "  </li>\n";
           $temp .= "  <li><a href=\"/developer/l10n/index.php\">Translations</a>\n";
